<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMember">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0sp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5sp"
            android:text="MEMBER"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/display_student_name"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:hint="Student name"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/display_student_usn"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:hint="Student usn"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />


                        <EditText
                            android:id="@+id/display_member_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:editable="true"
                            android:hint="@string/member_field"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/display_member_date"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:hint="Date"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp"
                            />

                        <EditText
                            android:id="@+id/display_member_gender_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:text="@string/meber_gender_text"
                            android:textSize="20sp" />



                        <EditText
                            android:id="@+id/display_member_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:editable="true"
                            android:hint="@string/member_age"
                            android:inputType="number"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/display_member_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:editable="true"
                            android:hint="@string/member_phone"
                            android:padding="5sp"
                            android:phoneNumber="true"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/display_member_occupation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:editable="true"
                            android:hint="@string/member_occupation"
                            android:padding="5sp"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/display_member_cards"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_cards"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20dp" />

                        <CheckBox
                            android:id="@+id/display_member_aadhar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_aadhar"
                            android:textColorHighlight="@android:color/holo_red_dark" />

                        <CheckBox
                            android:id="@+id/display_member_driving"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_driving"
                            android:textColorHighlight="@android:color/holo_red_dark" />

                        <CheckBox
                            android:id="@+id/display_member_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_birth"
                            android:textColorHighlight="@android:color/holo_red_dark" />

                        <CheckBox
                            android:id="@+id/display_member_marriage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_marriage"
                            android:textColorHighlight="@android:color/holo_red_dark" />

                        <CheckBox
                            android:id="@+id/display_member_ayushman"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_ayushman"
                            android:textColorHighlight="@android:color/holo_red_dark" />

                        <CheckBox
                            android:id="@+id/display_member_bank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:padding="5sp"
                            android:text="@string/member_bank"
                            android:textColorHighlight="@android:color/holo_red_dark" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/member_delete"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="delete"
                                android:background="@android:color/holo_orange_light"
                                android:text="@string/member_delete"
                                android:textColor="@android:color/black"
                                android:textSize="30dp" />

                            <Button
                                android:id="@+id/member_edit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="edit"
                                android:background="@android:color/holo_orange_light"
                                android:text="@string/member_edit"
                                android:textSize="30sp" />



                        </LinearLayout>
                        <Button
                            android:id="@+id/editDone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:text="@string/done"
                            android:visibility="gone"
                            android:background="@android:color/holo_orange_light"
                            android:textSize="30sp"/>
                    </LinearLayout>


                </ScrollView>




            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>